--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ header{
   rgba(45,65,80, .7),
   rgba(170,180,185, .6),
   rgba(249,249,249, .5)
-  ), url(img/bombillo1.jpg);
+  ), url(./img/bombillo1.jpg);
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
