--- a/css/style.css
+++ b/css/style.css
@@ -88,10 +88,10 @@ header{
   width: 100%;
   height:95vh;
   background: linear-gradient(to bottom,
-  rgba(0,0,250, .7),
+  rgba(0,250,250, .7),
   rgba(170,180,185, .6),
   rgba(249,249,249, .5)
-  ), url(bombillo1.jpg);
+  ), url(img/bombillo1.jpg);
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
