--- a/css/style.css
+++ b/css/style.css
@@ -88,10 +88,10 @@ header{
   width: 100%;
   height:95vh;
   background: linear-gradient(to bottom,
-  rgba(45,65,80, .7),
-  rgba(170,180, 185, .6),
-  rgba(249,249,249, .5)
-  ), url(img/1.jpg);
+  rgba(256,0,0, .7),
+  rgba(0,256, 0, .6),
+  rgba(0,0,256, .5)
+  ), url(./img/bombillo1.jpg);
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
