--- a/css/style.css
+++ b/css/style.css
@@ -88,10 +88,10 @@ header{
   width: 100%;
   height:95vh;
   background: linear-gradient(to bottom,
-  rgba(256,0,0, .7),
+  rgba(0,0, 256, .7),
   rgba(0,256, 0, .6),
-  rgba(0,0,256, .5)
-  ), url(./img/bombillo1.jpg);
+  rgba(256,0,0, .5)
+  ), url(/img/bombillo1.jpg);
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
