--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ img{
   vertical-align: top;
 }
 
-/* Preloader   */
+/* Preloader   
 .hidden{
   overflow: hidden;
 }
@@ -82,16 +82,16 @@ img{
   }
 }
 
-/* Header */ 
+Header */ 
 
 header{
   width: 100%;
   height:95vh;
   background: linear-gradient(to bottom,
-  rgba(0,0, 256, .7),
+  rgba(256,0, 0, .7),
   rgba(0,256, 0, .6),
-  rgba(256,0,0, .5)
-  ), url(/img/bombillo1.jpg);
+  rgba(0,0,256, .5)
+  ), url(img/bombillo1.jpg);
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
